    to support using LDAP as authentication from NSS/PAM

    - Changes come from https://github.com/jstruebel/openldap-nsspam.git

  * Changed the default group populated in the database to support using it
    as the auth backend for NSS/PAM from other TKL appliances

    - Changes come from https://github.com/jstruebel/openldap-nsspam.git

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.i

 -- Jonathan Struebel <jonathan.struebel@gmail.com>  Wed, 13 Jan 2016 21:30:21 -0700

turnkey-openldap-14.1 (1) turnkey; urgency=low

  * Fix LigHTTPd bug in 15regen-sllcert (#512).

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Jeremy Davis <jeremy@turnkeylinux.org>  Thu, 18 Feb 2016 15:19:03 +1100

turnkey-openldap-14.0 (1) turnkey; urgency=low

  * Latest Debian Jessie package version of OpenLDAP.

  * Lastest phpldap installed from upstream git

  * Other maintence work performed by Jonathan Struebel
    https://github.com/jstruebel

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.i

 -- Jeremy Davis <jeremy@turnkeylinux.org>  Fri, 14 Aug 2015 19:59:21 +1000

turnkey-openldap-13.0 (1) turnkey; urgency=low

  * Latest Debian Wheezy package version of OpenLDAP.

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Alon Swartz <alon@turnkeylinux.org>  Thu, 10 Oct 2013 18:38:30 +0300

turnkey-openldap-12.1 (1) turnkey; urgency=low

  * Upgraded to latest version of phpLDAPadmin.

  * Upstream source component versions:

    phpldapadmin    1.2.3

  * Note: Please refer to turnkey-core's changelog for changes common to all