@@ -1,0 +1,27 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE template SYSTEM "../template.dtd">
+
+<template>
+<askcontainer>1</askcontainer>
+<description>New Organisational Unit</description>
+<icon>ldap-ou.png</icon>
+<invalid>0</invalid>
+<rdn>ou</rdn>
+<!-- <regexp>^o=.*,</regexp> -->
+<title>TurnKey Linux: Organisational Unit</title>
+<visible>1</visible>
+
+<objectClasses>
+<objectClass id="organizationalUnit"></objectClass>
+</objectClasses>
+
+<attributes>
+<attribute id="ou">
+	<display>Organisational Unit</display>
+	<hint>don't include "ou="</hint>
+	<order>1</order>
+	<page>1</page>
+</attribute>
+</attributes>
+
+</template>
