@@ -1,0 +1,38 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE template SYSTEM "../template.dtd">
+<template>
+<title>TurnKey Linux: Posix Group</title>
+<!-- <regexp>^ou=.*,</regexp> -->
+<icon>ldap-ou.png</icon>
+<description>New Posix Group</description>
+<askcontainer>1</askcontainer>
+<rdn>cn</rdn>
+<visible>1</visible>
+
+<objectClasses>
+<objectClass id="posixGroup"></objectClass>
+</objectClasses>
+
+<attributes>
+<attribute id="cn">
+	<display>Group</display>
+	<order>1</order>
+	<page>1</page>
+</attribute>
+<attribute id="gidNumber">
+	<display>GID Number</display>
+	<order>2</order>
+	<page>1</page>
+	<value>=php.GetNextNumber(/;gidNumber)</value>
+	<spacer>1</spacer>
+</attribute>
+<attribute id="memberUid">
+	<array>10</array>
+	<display>Users</display>
+	<value><![CDATA[=php.MultiList(/;(&(objectClass=posixAccount));uid;%cn% (%uid%))]]></value>
+	<hidden>0</hidden>
+	<order>3</order>
+	<page>1</page>
+</attribute>
+</attributes>
+</template>
