@@ -1,0 +1,94 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE template SYSTEM "../template.dtd">
+<template>
+<title>TurnKey Linux: User Account</title>
+<!--<regexp>^ou=Users,o=.*,</regexp>-->
+<icon>ldap-user.png</icon>
+<description>New User Account</description>
+<askcontainer>1</askcontainer>
+<rdn>uid</rdn>
+<visible>1</visible>
+
+<objectClasses>
+<objectClass id="inetOrgPerson"></objectClass>
+<objectClass id="posixAccount"></objectClass>
+<objectClass id="shadowAccount"></objectClass>
+</objectClasses>
+
+<attributes>
+<attribute id="givenName">
+	<display>First name</display>
+	<icon>ldap-uid.png</icon>
+	<onchange>=autoFill(cn;%givenName% %sn%)</onchange>
+	<onchange>=autoFill(uid;%givenName|0-1/l%%sn/l%)</onchange>
+	<order>1</order>
+	<page>1</page>
+</attribute>
+<attribute id="sn">
+	<display>Last name</display>
+	<onchange>=autoFill(cn;%givenName% %sn%)</onchange>
+	<onchange>=autoFill(uid;%givenName|0-1/l%%sn/l%)</onchange>
+	<order>2</order>
+	<page>1</page>
+</attribute>
+<attribute id="cn">
+	<display>Common Name</display>
+	<order>3</order>
+	<page>1</page>
+	<spacer>1</spacer>
+</attribute>
+<attribute id="uid">
+	<display>User ID</display>
+	<onchange>=autoFill(mail;%uid%@example.com)</onchange>
+	<onchange>=autoFill(homeDirectory;/home/%uid%)</onchange>
+	<order>4</order>
+	<spacer>1</spacer>
+	<page>1</page>
+</attribute>
+<attribute id="mail">
+	<display>User Email</display>
+	<order>5</order>
+	<page>1</page>
+	<spacer>1</spacer>
+</attribute>
+<attribute id="uidNumber">
+	<display>UID Number</display>
+	<order>6</order>
+	<page>1</page>
+    <value><![CDATA[=php.GetNextNumber(/;uidNumber)]]></value>
+</attribute>
+<attribute id="userPassword">
+	<display>Password</display>
+	<icon>lock.png</icon>
+    <value><![CDATA[=php.RandomPassword()]]></value>
+	<order>8</order>
+	<page>1</page>
+	<post>=php.PasswordEncrypt(%enc%;%userPassword%)</post>
+	<verify>0</verify>
+</attribute>
+<attribute id="loginShell">
+	<display>Login shell</display>
+	<icon>terminal.png</icon>
+	<order>11</order>
+	<page>1</page>
+	<!-- <value><![CDATA[=php.PickList(/;(&(objectClass=posixAccount));loginShell;%loginShell%;;;;loginShell)]]></value> -->
+	<type>select</type>
+	<value id="/bin/dash">Almquist Shell</value>
+	<value id="/bin/bash">Bourne Shell</value>
+	<value id="/bin/csh">C Shell</value>
+	<value id="/bin/tsh">Turbo Shell</value>
+	<value id="/bin/false">None</value>
+</attribute>
+<attribute id="gidNumber">
+	<display>Group</display>
+	<order>12</order>
+	<page>1</page>
+	<value><![CDATA[=php.PickList(/;(&(objectClass=posixGroup));gidNumber;%cn%;;;;cn)]]></value>
+</attribute>
+<attribute id="homeDirectory">
+	<display>Home directory</display>
+	<order>14</order>
+	<page>1</page>
+</attribute>
+</attributes>
+</template>
