@@ -1,0 +1,38 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE template SYSTEM "../template.dtd">
+<template>
+<title>TurnKey Linux: Simple Account</title>
+<!--<regexp>^ou=Users,o=.*,</regexp>-->
+<icon>ldap-user.png</icon>
+<description>New Simple Account</description>
+<askcontainer>1</askcontainer>
+<rdn>uid</rdn>
+<visible>1</visible>
+
+<objectClasses>
+<objectClass id="shadowAccount"></objectClass>
+<objectClass id="account"></objectClass>
+</objectClasses>
+
+<attributes>
+<attribute id="uid">
+	<display>User Name</display>
+	<icon>ldap-uid.png</icon>
+	<order>1</order>
+	<page>1</page>
+	<spacer>1</spacer>
+</attribute>
+<attribute id="userPassword">
+	<display>Password</display>
+	<icon>lock.png</icon>
+    <value><![CDATA[=php.RandomPassword()]]></value>
+	<order>5</order>
+	<page>1</page>
+	<post>=php.PasswordEncrypt(%enc%;%userPassword%)</post>
+	<!--
+	<type>password</type>
+	-->
+	<verify>0</verify>
+</attribute>
+</attributes>
+</template>
