@@ -10,10 +10,15 @@ turnkey-openldap-14.2 (1) turnkey; urgency=low
 
     - Changes come from https://github.com/jstruebel/openldap-nsspam.git
 
+  * Added custom templates to phpLDAPAdmin to support user/group management
+    for the NSS/PAM changes above
+
+    - Changes come from https://github.com/jstruebel/openldap-pla.git
+
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.i
 
- -- Jonathan Struebel <jonathan.struebel@gmail.com>  Wed, 13 Jan 2016 21:30:21 -0700
+ -- Jonathan Struebel <jonathan.struebel@gmail.com>  Fri, 11 Mar 2016 12:07:21 -0700
 
 turnkey-openldap-14.1 (1) turnkey; urgency=low
 
